[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citsigol"
version = "0.1.0"
description = "Citsigol is an investigatory package providing utilities for investigation and manipulation of the reversed logistic (citsigol) map."
readme = "README.rst"
authors = [
  {name = "Dustin Phillip Summy", email = "dustinsummy@gmail.com"}
]
maintainers = [
  {name = "Dustin Phillip Summy", email = "dustinsummy@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/7c-c7/citsigol/issues"
changelog = "https://github.com/7c-c7/citsigol/blob/master/changelog.md"
homepage = "https://github.com/7c-c7/citsigol"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true

[tool.flake8]
max-line-length = 120
